# ros_navigation

./: README.md
custom_description/: CMakeLists.txt  LICENSE  README.md  kinect_vfh.rviz  launch.sh  nav.rviz  package.xml  real.rviz  sim_create.rviz  sim_create_follow_edge.rviz  sim_sweeper.rviz  simulation.rviz  simulation_kinect.rviz
custom_description/description/: kinect.urdf.xacro  lidar.urdf.xacro  range_sensor.urdf.xacro
custom_description/description/create/urdf/: create_2.urdf.xacro  create_2_with_both_wall_sensor.urdf.xacro  create_2_with_right_wall_sensor.urdf.xacro  create_base.urdf.xacro  create_base_gazebo.urdf.xacro
custom_description/description/kobuki/urdf/: kobuki.urdf.xacro  kobuki_gazebo.urdf.xacro  kobuki_sonar_4.xacro  kobuki_sonar_kinect.urdf.xacro  kobuki_standalone.urdf.xacro  kobuki_standalone_kinect.urdf.xacro  kobuki_standalone_lidar.urdf.xacro  kobuki_standalone_right_wall_sensor.urdf.xacro  kobuki_standalone_sonar.urdf.xacro  (+1 more)
custom_description/description/meshes/: ._blender  ._max_sonar_ez4.dae  max_sonar_ez4.dae
custom_description/include/custom_description/: range_sensor_helper_ros.h  vfh_algorithm.h  vfh_node.h
custom_description/launch/: driveRobot.launch  example.launch  robot.launch.xml  sim_create.launch  sim_kinect_vfh.launch  sim_kobuki_kinect.launch  sim_kobuki_lidar.launch  sim_kobuki_nav.launch  sim_kobuki_sonar.launch  sim_kobuki_sonar_vfh.launch  sim_sweeper.launch  view.launch
custom_description/maps/: ._blank.pgm  blank.pgm  blank.yaml
custom_description/param/: base_local_planner_params.yaml  cmd_vel_mux_safe.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml  velocity_mux.yaml
custom_description/script/: showHist.py  testVerifyShape.py
custom_description/src/: follow_edge_node.cpp  keyControl.cpp  range_sensor_helper_ros.cpp  vfh_algorithm.cc  vfh_node.cpp  vfh_sonar_node.cpp
custom_description/worlds/: ._playground.world  2room.world  bigBox.world  bigOffice.world  bigplace.world  bigplace.worldbackup  cafe.world  empty.world  emptyRoom.world  loop1.world  loop2.world  mall.world
grid_map-master/grid_map_core/test/: LineIteratorTest.cpp
grid_map-master/grid_map_cv/: CMakeLists.txt  package.xml
grid_map-master/grid_map_demos/: CMakeLists.txt  package.xml
grid_map-master/grid_map_ros/: CMakeLists.txt  package.xml
grid_map-master/grid_map_ros/src/: GridMapRosConverter.cpp
move_control/: CMakeLists.txt  nav.rviz  package.xml  setup.py
move_control/include/move_control/: astar_planner.h  continuous_sensor_helper_ros.h  laser_map_updater.h  map_global_planner.h  map_provider.h  map_updater.h  range_map_updater.h  rrt_planner.h  steerer.h  vfh.h
move_control/launch/: testMap.launch
move_control/msg/: Histogram.msg
move_control/script/: showHist.py
move_control/src/: astar_planner.cpp  laser_map_updater.cpp  map_provider.cpp  nav_graph_node.cpp  nav_node.cpp  nav_only_vfh_node.cpp  range_map_updater.cpp  rrt_planner.cpp  steerer.cpp  vfh.cpp
(+8 files in other folders)
