<?xml version="1.0"?>
<package> 
  <name>move_control</name>
  <version>0.0.0</version>
  <description>The move_control package</description>
 
  <maintainer email="exbot@todo.todo">exbot</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>grid_map_core</build_depend>
  <build_depend>grid_map_ros</build_depend>
  <build_depend>laser_geometry</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>grid_map_core</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>grid_map_ros</run_depend>
  <run_depend>laser_geometry</run_depend>

  <export>
  </export>
</package>
